# concordance

./: .gitignore  LICENSE  README.md  STATUS.md  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  support_question.yml
.github/workflows/: build.yml
data/presets/: aura-lab-extended.json  nsf-2025-leaked.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine.rs  lib.rs  main.rs
